[BE] Implement product
Add controllers methods:
- Get
- Update
- Delete
- Create
Add route paths, where requests
has to be made.
