# server/routes/index.route.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const userRoutes = require('./user.route');
 const authRoutes = require('./auth.route');
+const productRoutes = require('./product.route');
 
 const router = express.Router(); // eslint-disable-line new-cap
 
@@ -11,5 +12,6 @@ router.get('/health-check', (req, res) =>
 
 router.use('/auth', authRoutes);
 router.use('/user', userRoutes);
+router.use('/product', productRoutes);
 
 module.exports = router;
